[package]
name = "reflecto"
version = "0.1.5"
edition = "2021"
description = "A port of reflector"
repository = "https://github.com/manu3618/reflecto"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
assert_cmd = "2.0.14"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
reqwest = { version = "0.12.4", features = ["blocking"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.38.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
itertools = "0.13.0"
