[package]
name = "reflecto"
version = "0.1.6"
edition = "2021"
description = "A port of reflector"
repository = "https://github.com/manu3618/reflecto"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
assert_cmd = "2.2.1"
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[dev-dependencies]
itertools = "0.14.0"
